--- a/AspSolutionBackend/Graph/Graph.csproj
+++ b/AspSolutionBackend/Graph/Graph.csproj
@@ -8,4 +8,8 @@
       <ProjectReference Include="..\Utils\Utils.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="OptimizedPriorityQueue" Version="5.1.0" />
+    </ItemGroup>
+
 </Project>
