added RouteInfoData entity

--- a/AspSolutionBackend/WebApp/appsettings.json
+++ b/AspSolutionBackend/WebApp/appsettings.json
@@ -3,9 +3,9 @@
     "DefaultConnection": "Server=barrel.itcollege.ee,1433;User Id=Student;Password=Student.Pass.1;Database=temp_dbdemo;MultipleActiveResultSets=true"
   },
   "AppData": {
-    "DropDatabase": false,
-    "Migrate": false,
-    "SeedData": false
+    "DropDatabase": true,
+    "Migrate": true,
+    "SeedData": true
   },
   "Logging": {
     "LogLevel": {
