--- a/ReactSolutionFrontend/react-app/package.json
+++ b/ReactSolutionFrontend/react-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -13,6 +14,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4",
     "web-vitals": "^0.2.4",
@@ -56,6 +58,7 @@
   "devDependencies": {
     "@types/bootstrap": "^5.1.3",
     "@types/jquery": "^3.5.8",
+    "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
