--- a/AspSolutionBackend/DAL.App.EF/DAL.App.EF.csproj
+++ b/AspSolutionBackend/DAL.App.EF/DAL.App.EF.csproj
@@ -5,10 +5,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Dijkstra.NET" Version="1.2.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
+      <PackageReference Include="morelinq" Version="3.3.2" />
     </ItemGroup>
 
     <ItemGroup>
