--- a/AspSolutionBackend/Graph/Graph.csproj
+++ b/AspSolutionBackend/Graph/Graph.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="OptimizedPriorityQueue" Version="5.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="GraphActions" />
+    </ItemGroup>
+
 </Project>
