--- a/AspSolutionBackend/WebApp/appsettings.json
+++ b/AspSolutionBackend/WebApp/appsettings.json
@@ -3,8 +3,8 @@
     "DefaultConnection": "Server=barrel.itcollege.ee,1433;User Id=Student;Password=Student.Pass.1;Database=temp_dbdemo;MultipleActiveResultSets=true"
   },
   "AppData": {
-    "DropDatabase": true,
-    "Migrate": true,
+    "DropDatabase": false,
+    "Migrate": false,
     "SeedData": false,
     "UpdateDataAfterExpired": true
   },
