--- a/AspSolutionBackend/PublicApiDTO/PublicApiDTO.csproj
+++ b/AspSolutionBackend/PublicApiDTO/PublicApiDTO.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\App.Domain\App.Domain.csproj" />
+      <ProjectReference Include="..\Utils\Utils.csproj" />
     </ItemGroup>
 
 </Project>
