fixed reservation success, it showed the first not by id

--- a/AspSolutionBackend/WebApp/appsettings.json
+++ b/AspSolutionBackend/WebApp/appsettings.json
@@ -6,7 +6,7 @@
     "DropDatabase": false,
     "Migrate": false,
     "SeedData": false,
-    "UpdateDataAfterExpired": true
+    "UpdateDataAfterExpired": false
   },
   "Logging": {
     "LogLevel": {
